[package]
name = "advent"
version = "0.1.0"
authors = ["Yusuph Mkangara <yusuph.mka@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nom]
version = "6"

[dependencies.regex]
version = "1"

[dependencies.indextree]
version = "4"